# stickers

./: .gitattributes  .gitignore  README.md  analysis_options.yaml  build_all.cmd  flutter_launcher_icons.yaml  l10n.yaml  privacy_policy.md  pubspec.yaml  untranslated.json
.github/: FUNDING.yml
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  libwebp_connector.cpp
android/app/src/main/kotlin/com/example/stickers/: MainActivity.kt
android/app/src/main/kotlin/de/loicezt/stickers/: MainActivity.kt
android/app/src/main/kotlin/de/loicezt/stickers/video/: CropAndScale.kt  CropScaleGL.kt  LibWebP.kt  OverlayAndEncode.kt  OverlayGL.kt  ProgressState.kt  State.kt
android/app/src/main/res/xml/: share_targets.xml
assets/shaders/: hsl.frag  hue_gradient.frag  lightness_gradient.frag  saturation_gradient.frag
lib/: main.dart
lib/l10n/: app_de.arb  app_en.arb  app_fr.arb  app_ru.arb
lib/src/: app.dart  checker_painter.dart  constants.dart  globals.dart  util.dart
lib/src/data/: editor_data.dart  load_store.dart  sticker.dart  sticker_pack.dart
lib/src/dialogs/: confirm_leave_dialog.dart  create_pack_dialog.dart  delete_confirm_dialog.dart  edit_pack_dialog.dart  edit_quickmode_defaults_dialog.dart  edit_sticker_dialog.dart  edit_text_dialog.dart  error_dialog.dart  eyedropper_dialog.dart  select_sticker_dialog.dart
lib/src/fonts_api/: fonts_models.dart  fonts_registry.dart  google_fonts.dart
lib/src/localization/: app_en.arb
lib/src/pages/: crop_page.dart  default_page.dart  edit_page.dart  fonts_manager_page.dart  fonts_search_delegate.dart  fonts_search_page.dart  select_pack_page.dart  sticker_pack_page.dart  sticker_packs_page.dart  video_crop_page.dart
lib/src/settings/: settings_controller.dart  settings_page.dart  settings_service.dart
lib/src/video/: common.dart  crop_scale.dart  overlay_encode.dart
lib/src/widgets/: draw_layer.dart  image_layer.dart  sticker_pack_preview_card.dart  text_layer.dart
